--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио 3D-Персонажей АAA-Качества | Vash_Name</title>
+    <title>3D-Персонажи АAA-Качества | BoRzoY</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -95,4 +95,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
