--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h4>Изображения (Через запятую):</h4>
         <input type="text" id="images-input" placeholder="images/img1.jpg, images/img2.jpg, ...">
         
-        <h4>Видео (URL Google Drive|Комментарий, через запятую):</h4>
+        <h4>Видео (URL Dropbox/GDrive|Комментарий, через запятую):</h4>
         <input type="text" id="videos-input" placeholder="https://drive.google.com/file/d/.../view|Видео с анимацией, ...">
         
         <button onclick="addPortfolioItem()">Добавить Работу в Портфолио</button>
