--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <section id="hero">
         <h1>Создание стилизованных 3D-Персонажей</h1>
         <p>АAA-Качество для Игр или Медиа. Ознакомьтесь с моими работами.</p>
+
+        <div class="usp-block">
+            <p><strong><span style="color: var(--accent-color);">✓</span> Оптимизированная Сетка (Low/High Poly)</strong></p>
+            <p><strong><span style="color: var(--accent-color);">✓</span> Готовый Риг и Анимация</strong></p>
+            <p><strong><span style="color: var(--accent-color);">✓</span> PBR/UE5/Unity Материалы</strong></p>
+        </div>
         <a href="#portfolio" class="cta-button">Смотреть Работы</a>
         <a href="#order-section" class="cta-button secondary-cta">Заказать 3D Модель</a>
     </section>
@@ -95,5 +101,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
